# path_planning

./: CMakeLists.txt  README.md  package.xml  readyRviz.rviz  setup.cfg  setup.py
config/real/: config.yaml
config/sim/: pf_sim_config.yaml  sim_config.yaml
example_trajectories/: trajectory_1.traj  trajectory_2.traj  trajectory_3.traj
launch/: build_trajectory.launch  follow_trajectory.launch  follow_trajectory_tesse.launch  load_trajectory.launch  plan_trajectory.launch  plan_trajectory_tesse.launch
launch/debug/: build_trajectory.launch.xml  follow_trajectory.launch.xml  load_trajectory.launch.xml
launch/real/: real.launch.xml
launch/sim/: pf_sim_plan_follow.launch.xml  sim_plan.launch.xml  sim_plan_follow.launch.xml
path_planning/: trajectory_builder.py  trajectory_follower.py  trajectory_loader.py  trajectory_planner.py  utils.py
src/: path_planning.py  pure_pursuit.py  trajectory_builder.py  trajectory_loader.py  utils.py  visualization_tools.py
trajectories/: 2019-04-01-12-25-17.traj  loop2.traj  test_traj.traj
