<?xml version="1.0"?>
<package format="3">
    <name>path_planning</name>
    <version>0.0.0</version>
    <description>The path planning package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="kathleen@todo.todo">kathleen</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <build_depend>racecar_simulator</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>tf_transformations</build_depend>

    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf_transformations</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
